# trcks-example-fastapi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/run-pre-commit/: action.yml
.github/actions/run-tests-and-type-checks/: action.yml
.github/actions/set-up-pre-commit/: action.yml
.github/actions/set-up-uv/: action.yml
.github/instructions/: review.instructions.md
.github/workflows/: continuous-integration.yml  copilot-setup-steps.yml
app/: database.py  main.py
app/data_structures/: models.py
app/data_structures/domain/: product.py  subscription.py  user.py
app/data_structures/schemas/: health_schemas.py  product_schemas.py  subscription_schemas.py  user_schemas.py
app/logic/: database.py  main.py
app/logic/repositories/: dummy_repository.py  product_repository.py  subscription_repository.py  user_repository.py
app/logic/routers/: health_router.py  product_router.py  subscription_router.py  user_router.py
app/logic/services/: dummy_service.py  product_service.py  subscription_service.py  user_service.py
src/subscription_management/data_structures/: models.py
src/subscription_management/data_structures/domain/: product_error.py
src/subscription_management/data_structures/schemas/: user_schemas.py
src/subscription_management/logic/: _test_helpers.py
src/subscription_management/logic/repositories/: product_repository.py  subscription_repository.py  user_repository.py
src/subscription_management/logic/routers/: health_router.py  product_router.py  subscription_router.py  user_router.py
src/subscription_management/logic/services/: dummy_service.py  product_service.py  subscription_service.py
src/subscription_management/testing/: helpers.py
subscription_management/data_structures/: models.py
subscription_management/data_structures/domain/: errors.py  product.py  product_error.py  subscription.py  subscription_error.py  user.py  user_error.py
subscription_management/data_structures/schemas/: health_schemas.py  product_schemas.py  subscription_schemas.py
subscription_management/logic/: database.py  main.py
subscription_management/logic/repositories/: dummy_repository.py  product_repository.py  subscription_repository.py  user_repository.py
subscription_management/logic/routers/: product_router.py  subscription_router.py  user_router.py
subscription_management/logic/services/: product_service.py  subscription_service.py  user_service.py
tests/: conftest.py  test_database.py  test_foreign_keys.py
tests/data_structures/: test_errors.py  test_models.py  test_product.py  test_subscription.py  test_user.py
tests/logic/repositories/: test_product_repository.py
tests/logic/routers/: test_health_router.py  test_product_router.py  test_subscription_router.py  test_user_router.py
tests/subscription_management/: conftest.py
tests/subscription_management/data_structures/: test_models.py
tests/subscription_management/logic/: conftest.py
tests/subscription_management/logic/repositories/: test_product_repository.py
tests/subscription_management/logic/routers/: _types.py  conftest.py  test_health_router.py  test_product_router.py  test_subscription_router.py  test_user_router.py
