[dependency-groups]
dev = [
    "anyio==4.14.1", # provides pytest plugin for testing async code
    "httpx==0.28.1", # provides ASGITransport and AsyncClient used for testing
    "import-linter==2.12",
    "pre-commit==4.6.0",
    "pyright[nodejs]==1.1.411",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "trcks[pyright]", # check project.dependencies for version
]

[project]
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.138.1",
    "pydantic==2.13.4",
    "sqlalchemy[aiosqlite]==2.0.51",
    "trcks==0.6.0",
]
dynamic = ["version"]
name = "trcks-example-fastapi"
requires-python = "==3.14.*"

[tool.fastapi]
entrypoint = "app.logic.main:app"

[tool.importlinter]
exclude_type_checking_imports = false
include_external_packages = true
root_package = "app"

[[tool.importlinter.contracts]]
name = "Root layers"
type = "layers"
containers = ["app"]
exhaustive = true
layers = [
    "logic",
    "data_structures",
]

[[tool.importlinter.contracts]]
name = "Data structures sublayers"
type = "layers"
containers = ["app.data_structures"]
exhaustive = true
layers = [
    "models | schemas",
    "domain",
]

[[tool.importlinter.contracts]]
name = "Logic sublayers"
type = "layers"
containers = ["app.logic"]
exhaustive = true
layers = [
    "main",
    "routers",
    "services",
    "repositories",
    "database",
]

[[tool.importlinter.contracts]]
name = "Independence of routers"
type = "independence"
modules = [
    "app.logic.routers.*",
]

[[tool.importlinter.contracts]]
name = "Independence of services"
type = "independence"
modules = [
    "app.logic.services.*",
]

# Repositories are intentionally not independent; they collaborate with each other.

[[tool.importlinter.contracts]]
name = "Purity of domain"
type = "forbidden"
source_modules = ["app.data_structures.domain"]
forbidden_modules = ["fastapi", "pydantic", "sqlalchemy", "starlette", "trcks"]

[[tool.importlinter.contracts]]
name = "Isolation of schemas from persistence and the web framework"
type = "forbidden"
source_modules = ["app.data_structures.schemas"]
forbidden_modules = ["fastapi", "sqlalchemy", "starlette"]

[[tool.importlinter.contracts]]
name = "Isolation of models from the web framework"
type = "forbidden"
source_modules = ["app.data_structures.models"]
forbidden_modules = ["fastapi", "pydantic", "starlette"]

[[tool.importlinter.contracts]]
name = "Direct persistence access limited to repositories and database"
type = "protected"
protected_modules = ["sqlalchemy"]
allowed_importers = [
    "app.data_structures.models",
    "app.logic.database",
    "app.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Protection of domain"
type = "protected"
protected_modules = ["app.data_structures.domain"]
allowed_importers = [
    "app.data_structures",
    "app.logic.repositories",
    "app.logic.services",
]

[[tool.importlinter.contracts]]
name = "Protection of models"
type = "protected"
protected_modules = ["app.data_structures.models"]
allowed_importers = [
    "app.logic.database",
    "app.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Protection of schemas"
type = "protected"
protected_modules = ["app.data_structures.schemas"]
allowed_importers = [
    "app.logic.routers",
]

[[tool.importlinter.contracts]]
name = "Protection of database"
type = "protected"
protected_modules = ["app.logic.database"]
allowed_importers = [
    "app.logic.main",
    "app.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Protection of repositories"
type = "protected"
protected_modules = ["app.logic.repositories"]
allowed_importers = [
    "app.logic.services",
]

[[tool.importlinter.contracts]]
name = "Protection of services"
type = "protected"
protected_modules = ["app.logic.services"]
allowed_importers = [
    "app.logic.routers",
]

[[tool.importlinter.contracts]]
name = "Acyclic siblings"
type = "acyclic_siblings"
ancestors = ["app"]

[tool.pyright]
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=100 --cov-report=term-missing --import-mode=importlib"
anyio_mode = "auto"
filterwarnings = ["error"]
pythonpath = ["."]

[tool.ruff.lint]
ignore = [
    "COM812", # "may cause conflicts when used with the formatter"
    "D1", # would complain about missing docstrings
]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "sqlalchemy.orm.DeclarativeBase",
]
runtime-evaluated-decorators = [
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
add-bounds = "exact"
required-version = "~=0.11.0"
