[dependency-groups]
dev = [
    "anyio==4.14.1", # provides pytest plugin for testing async code
    "httpx==0.28.1", # provides ASGITransport and AsyncClient used for testing
    "import-linter==2.12",
    "pre-commit==4.6.0",
    "pyright[nodejs]==1.1.411",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "trcks[pyright]", # check project.dependencies for version
]

[project]
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.138.1",
    "pydantic==2.13.4",
    "sqlalchemy[aiosqlite]==2.0.51",
    "trcks==0.6.0",
]
dynamic = ["version"]
name = "trcks-example-fastapi"
requires-python = "==3.14.*"

[tool.fastapi]
entrypoint = "app.logic.main:app"

[tool.importlinter]
exclude_type_checking_imports = false
include_external_packages = true
root_package = "app"

[[tool.importlinter.contracts]]
name = "app has exactly two layers"
type = "layers"
containers = ["app"]
exhaustive = true
layers = [
    "logic",
    "data_structures",
]

[[tool.importlinter.contracts]]
name = "app.data_structures has exactly two sublayers"
type = "layers"
containers = ["app.data_structures"]
exhaustive = true
layers = [
    "models | schemas",
    "domain",
]

[[tool.importlinter.contracts]]
name = "app.logic has exactly five sublayers"
type = "layers"
containers = ["app.logic"]
exhaustive = true
layers = [
    "main",
    "routers",
    "services",
    "repositories",
    "database",
]

[[tool.importlinter.contracts]]
name = "Modules in app.logic.routers are independent"
type = "independence"
modules = [
    "app.logic.routers.*",
]

[[tool.importlinter.contracts]]
name = "Modules in app.logic.services are independent"
type = "independence"
modules = [
    "app.logic.services.*",
]

# Repositories are intentionally not independent; they collaborate with each other.

[[tool.importlinter.contracts]]
name = "Only production dependencies, standard library modules, and internal modules can be imported"
type = "forbidden"
source_modules = ["*"]
forbidden_modules = ["*"]
ignore_imports = [
    "** -> collections",
    "** -> contextlib",
    "** -> dataclasses",
    "** -> datetime",
    "** -> decimal",
    "** -> fastapi",
    "** -> pydantic",
    "** -> sqlalchemy",
    "** -> trcks",
    "** -> typing",
    "** -> uuid",
]

[[tool.importlinter.contracts]]
name = "Only app.logic can import fastapi"
type = "protected"
protected_modules = ["fastapi"]
allowed_importers = [
    "app.logic",
]

[[tool.importlinter.contracts]]
name = "Only app.data_structures.schemas can import pydantic"
type = "protected"
protected_modules = ["pydantic"]
allowed_importers = [
    "app.data_structures.schemas",
]

[[tool.importlinter.contracts]]
name = "Only app.data_structures.models, app.logic.database, and app.logic.repositories can import sqlalchemy"
type = "protected"
protected_modules = ["sqlalchemy"]
allowed_importers = [
    "app.data_structures.models",
    "app.logic.database",
    "app.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Only app.data_structures, app.logic.repositories, and app.logic.services can import app.data_structures.domain"
type = "protected"
protected_modules = ["app.data_structures.domain"]
allowed_importers = [
    "app.data_structures",
    "app.logic.repositories",
    "app.logic.services",
]

[[tool.importlinter.contracts]]
name = "Only app.logic.database and app.logic.repositories can import app.data_structures.models"
type = "protected"
protected_modules = ["app.data_structures.models"]
allowed_importers = [
    "app.logic.database",
    "app.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Only app.logic.routers can import app.data_structures.schemas"
type = "protected"
protected_modules = ["app.data_structures.schemas"]
allowed_importers = [
    "app.logic.routers",
]

[[tool.importlinter.contracts]]
name = "Only app.logic.main and app.logic.repositories can import app.logic.database"
type = "protected"
protected_modules = ["app.logic.database"]
allowed_importers = [
    "app.logic.main",
    "app.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Only app.logic.services can import app.logic.repositories"
type = "protected"
protected_modules = ["app.logic.repositories"]
allowed_importers = [
    "app.logic.services",
]

[[tool.importlinter.contracts]]
name = "Only app.logic.routers can import app.logic.services"
type = "protected"
protected_modules = ["app.logic.services"]
allowed_importers = [
    "app.logic.routers",
]

[[tool.importlinter.contracts]]
name = "Dependency cycles between siblings are forbidden"
type = "acyclic_siblings"
ancestors = ["app"]

[tool.pyright]
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=100 --cov-report=term-missing --import-mode=importlib"
anyio_mode = "auto"
filterwarnings = ["error"]
pythonpath = ["."]

[tool.ruff.lint]
ignore = [
    "COM812", # "may cause conflicts when used with the formatter"
    "D1", # would complain about missing docstrings
]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "sqlalchemy.orm.DeclarativeBase",
]
runtime-evaluated-decorators = [
    "dataclasses.dataclass",
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
add-bounds = "exact"
required-version = "~=0.11.0"
