[build-system]
build-backend = "uv_build"
requires = ["uv_build<1"] # check tool.uv.required-version for tighter version constraints

[dependency-groups]
dev = [
    "anyio==4.14.2", # provides pytest plugin for testing async code
    "httpx==0.28.1", # provides ASGITransport and AsyncClient used for testing
    "import-linter==2.13",
    "pre-commit==4.6.0",
    "pyright[nodejs]==1.1.411",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "trcks[pyright]", # check project.dependencies for version
]

[project]
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = [
    "fastapi==0.139.0",
    "fastapi-cli==0.0.24",
    "pydantic==2.13.4",
    "sqlalchemy[aiosqlite]==2.0.51",
    "trcks==0.6.1",
]
name = "subscription-management"
requires-python = "==3.14.*"
version = "0.0.0"

[tool.fastapi]
entrypoint = "subscription_management.logic.main:app"

[tool.importlinter]
exclude_type_checking_imports = false
include_external_packages = true
root_package = "subscription_management"

[[tool.importlinter.contracts]]
name = "subscription_management has exactly three layers"
type = "layers"
containers = ["subscription_management"]
exhaustive = true
layers = [
    "testing",
    "logic",
    "data_structures",
]

[[tool.importlinter.contracts]]
name = "subscription_management.data_structures has exactly two sublayers"
type = "layers"
containers = ["subscription_management.data_structures"]
exhaustive = true
layers = [
    "models | schemas",
    "domain",
]

[[tool.importlinter.contracts]]
name = "subscription_management.logic has exactly five sublayers"
type = "layers"
containers = ["subscription_management.logic"]
exhaustive = true
layers = [
    "main",
    "routers",
    "services",
    "repositories",
    "database",
]

[[tool.importlinter.contracts]]
name = "Modules in subscription_management.logic.routers are independent"
type = "independence"
modules = [
    "subscription_management.logic.routers.*",
]

[[tool.importlinter.contracts]]
name = "Modules in subscription_management.logic.services are independent"
type = "independence"
modules = [
    "subscription_management.logic.services.*",
]

# Repositories are intentionally not independent; they collaborate with each other.

[[tool.importlinter.contracts]]
name = "Only production dependencies, standard library modules, and internal modules can be imported"
type = "forbidden"
source_modules = ["*"]
forbidden_modules = ["*"]
ignore_imports = [
    "** -> collections",
    "** -> contextlib",
    "** -> dataclasses",
    "** -> datetime",
    "** -> decimal",
    "** -> fastapi",
    "** -> pydantic",
    "** -> sqlalchemy",
    "** -> trcks",
    "** -> typing",
    "** -> uuid",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.logic can import fastapi"
type = "protected"
protected_modules = ["fastapi"]
allowed_importers = [
    "subscription_management.logic",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.data_structures.schemas can import pydantic"
type = "protected"
protected_modules = ["pydantic"]
allowed_importers = [
    "subscription_management.data_structures.schemas",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.data_structures.models, subscription_management.logic.database, subscription_management.logic.repositories, and subscription_management.testing.helpers can import sqlalchemy"
type = "protected"
protected_modules = ["sqlalchemy"]
allowed_importers = [
    "subscription_management.data_structures.models",
    "subscription_management.logic.database",
    "subscription_management.logic.repositories",
    "subscription_management.testing.helpers",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.data_structures, subscription_management.logic.repositories, subscription_management.logic.routers, subscription_management.logic.services, and subscription_management.testing.helpers can import subscription_management.data_structures.domain"
type = "protected"
protected_modules = ["subscription_management.data_structures.domain"]
allowed_importers = [
    "subscription_management.data_structures",
    "subscription_management.logic.repositories",
    "subscription_management.logic.routers",
    "subscription_management.logic.services",
    "subscription_management.testing.helpers",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.logic.database and subscription_management.logic.repositories can import subscription_management.data_structures.models"
type = "protected"
protected_modules = ["subscription_management.data_structures.models"]
allowed_importers = [
    "subscription_management.logic.database",
    "subscription_management.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.logic.routers can import subscription_management.data_structures.schemas"
type = "protected"
protected_modules = ["subscription_management.data_structures.schemas"]
allowed_importers = [
    "subscription_management.logic.routers",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.logic.main and subscription_management.logic.repositories can import subscription_management.logic.database"
type = "protected"
protected_modules = ["subscription_management.logic.database"]
allowed_importers = [
    "subscription_management.logic.main",
    "subscription_management.logic.repositories",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.logic.services and subscription_management.testing.helpers can import subscription_management.logic.repositories"
type = "protected"
protected_modules = ["subscription_management.logic.repositories"]
allowed_importers = [
    "subscription_management.logic.services",
    "subscription_management.testing.helpers",
]

[[tool.importlinter.contracts]]
name = "Only subscription_management.logic.routers can import subscription_management.logic.services"
type = "protected"
protected_modules = ["subscription_management.logic.services"]
allowed_importers = [
    "subscription_management.logic.routers",
]

[[tool.importlinter.contracts]]
name = "Dependency cycles between siblings are forbidden"
type = "acyclic_siblings"
ancestors = ["subscription_management"]

[tool.pyright]
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = true
reportUnusedCallResult = true
typeCheckingMode = "strict"

[tool.pytest]
addopts = ["--cov=subscription_management", "--cov-fail-under=100", "--cov-report=term-missing", "--import-mode=importlib"]
anyio_mode = "auto"
filterwarnings = ["error"]
strict = true

[tool.ruff.lint]
ignore = [
    "COM812", # "may cause conflicts when used with the formatter"
    "D1", # would complain about missing docstrings
]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "sqlalchemy.orm.DeclarativeBase",
]
runtime-evaluated-decorators = [
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
]

[tool.ruff.lint.per-file-ignores]
"src/subscription_management/testing/helpers.py" = ["S101"]
"tests/**" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
add-bounds = "exact"
required-version = "~=0.11.0"
